# carrierslb-sync

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  carrierslb_sync.py  config.cfg.example  docker-compose.yml  pyproject.toml  repository.yaml  supervisord.conf.example
.github/workflows/: ci.yml  release.yml
carriers_sync/: CHANGELOG.md  DOCS.md  Dockerfile  config.yaml  run.sh
carriers_sync/src/carriers_sync/: __main__.py  config.py  discovery.py  logging_setup.py  mqtt_publisher.py  scheduler.py  state_store.py
carriers_sync/src/carriers_sync/providers/: __init__.py  alfa_lb.py  base.py  ogero_lb.py  touch_lb.py
dev/: options.json.example  rewrite-history.sh
docs/: dashboard-mockup.html
docs/superpowers/plans/: 2026-04-28-ha-carriers.md
docs/superpowers/specs/: 2026-04-28-ha-carriers-design.md
tests/fixtures/: alfa_getmyservices_response.json  alfa_login_rejected.html  alfa_mobile_internet.json  alfa_ushare_response.json  ogero_dashboard_response.html  touch_no_internet_response.html  touch_usage_mb_response.html  touch_usage_response.html
tests/unit/: test_alfa_lb_fetch.py  test_alfa_lb_parser.py  test_config.py  test_discovery.py  test_logging_setup.py  test_main_imports.py  test_mqtt_publisher.py  test_ogero_lb_parser.py  test_provider_registry.py  test_providers_base.py  test_scheduler.py  test_state_store.py  test_touch_lb_parser.py
